--- a/src/components/WalletForm.css
+++ b/src/components/WalletForm.css
@@ -1,3 +1,81 @@
 .wallet-form {
-  color: black;
+  color: #003be5;
+  display: flex;
+  flex-direction: column;
+}
+
+.wallet-form label {
+  font-weight: 700;
+}
+
+.wallet-form label input , .wallet-form label select {
+  border: 1px solid #003be5;
+  border-radius: 5px;
+  margin-left: 10px;
+  padding: 5px;
+}
+
+.wallet-form label select {
+  color: #003be5;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 80%;
+}
+
+.form-container div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.form-container div label {
+  align-items: center;
+  display: flex;
+  margin: 10px 0;
+  min-width: fit-content;
+}
+
+.form-container div label input , .form-container div label select {
+  flex-grow: 1;
+  max-width: 100%;
+}
+
+.tag , .currency {
+  display: flex;
+  justify-content: flex-end;
+  min-width: fit-content;
+}
+
+.description {
+  width: 60%;
+}
+
+.tag {
+  width: 30%;
+}
+
+.value {
+  width: 25%;
+}
+
+.method {
+  width: 50%;
+}
+
+.currency {
+  width: 15%;
+}
+
+.wallet-form button {
+  background-color: #2fc18c;
+  border: transparent;
+  border-radius: 5px;
+  color: white;
+  margin: 20px auto;
+  padding: 10px 80px;
+  width: max-content;
 }
