--- a/src/pages/Wallet.css
+++ b/src/pages/Wallet.css
@@ -3,5 +3,7 @@
   border-radius: 0 0 10px 10px;
   box-shadow: -4px 9px 13px rgba(5, 18, 54, 0.4);
   margin: auto;
+  position: relative;
   width: 80%;
+  z-index: 1;
 }
