--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -42,4 +42,13 @@
 .login-button {
   background-color: #003be5;
   color: white;
+  transition: all 0.2s;
+}
+
+.login-button:hover {
+  background-color: #0028a0;
+}
+
+.login-button:disabled {
+  background-color: #0028a0;
 }
